--- a/frontend/src/app/components/lista-produtos/lista-produtos.component.html
+++ b/frontend/src/app/components/lista-produtos/lista-produtos.component.html
@@ -3,7 +3,6 @@
 <ul>
   <li *ngFor="let produto of produtos">
     <strong>{{ produto.nome }}</strong> - R$ {{ produto.preco }}<br>
-    Categoria: {{ produto.categoria.nome }}
+    Categoria: {{ produto.categoria?.nome }}
   </li>
 </ul>
-
