--- a/frontend/src/app/components/lista-produtos/lista-produtos.component.html
+++ b/frontend/src/app/components/lista-produtos/lista-produtos.component.html
@@ -1,8 +1,16 @@
 <h2>Lista de Produtos</h2>
 
+<!-- Filtros -->
+<div>
+  <input type="text" placeholder="Buscar por nome" [(ngModel)]="filtroNome">
+  <input type="text" placeholder="Buscar por categoria" [(ngModel)]="filtroCategoria">
+  <button (click)="buscarComFiltros()">Buscar</button>
+</div>
+
+<!-- Lista -->
 <ul>
   <li *ngFor="let produto of produtos">
     <strong>{{ produto.nome }}</strong> - R$ {{ produto.preco }}<br>
-    Categoria: {{ produto.categoria?.nome }}
+    Categoria: {{ produto.categoria.nome }}
   </li>
 </ul>
